attempt fix on mobile parallax image size issue 9

--- a/style.scss
+++ b/style.scss
@@ -112,7 +112,6 @@ body {
   align-items: flex-end;
   @media (max-width: 415px) {
     background-attachment: scroll;
-    background-size: auto;
     background-position: center;
   }
 }
